crates/squealy/tests/compile_fail/insert_select_omits_required_column.stderr
error[E0277]: `INSERT` must supply every required (non-null, no-default) column of the target table
  --> tests/compile_fail/insert_select_omits_required_column.rs:16:39
   |
16 |     let _query = conn.to::<Account>().insert_select(
   |                                       ^^^^^^^^^^^^^ the trait `squealy::CoversColumn<AccountEmail, _>` is not implemented for `HNil`
   |
   = note: set the missing column on the write builder, or add it to the `INSERT … SELECT` target list
help: the following other types implement trait `squealy::CoversColumn<T, Index>`
  --> $WORKSPACE/crates/squealy-core/src/list.rs
   |
   |   impl<T, Tail> CoversColumn<T, Here> for HCons<T, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HCons<T, Tail>` implements `squealy::CoversColumn<T, squealy::Here>`
   |
   | / impl<T, Head, Tail, Index> CoversColumn<T, There<Index>> for HCons<Head, Tail> where
   | |     Tail: CoversColumn<T, Index>
   | |________________________________^ `HCons<Head, Tail>` implements `squealy::CoversColumn<T, squealy::There<Index>>`
   = note: required for `HCons<AccountName, HNil>` to implement `squealy::CoversColumn<AccountEmail, squealy::There<_>>`
   = note: required for `HCons<squealy::RequiredCol<AccountEmail, squealy::NonNullableColumn>, HNil>` to implement `squealy::RequiredCovered<HCons<AccountName, HNil>, HCons<squealy::There<_>, HNil>>`
   = note: 1 redundant requirement hidden
   = note: required for `HCons<squealy::RequiredCol<AccountName, squealy::NonNullableColumn>, HCons<squealy::RequiredCol<AccountEmail, squealy::NonNullableColumn>, HNil>>` to implement `squealy::RequiredCovered<HCons<AccountName, HNil>, HCons<squealy::Here, HCons<squealy::There<_>, HNil>>>`
note: required by a bound in `__SquealyAccountWriteBuilder::<'conn, Conn>::insert_select`
  --> tests/compile_fail/insert_select_omits_required_column.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyAccountWriteBuilder::<'conn, Conn>::insert_select`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
